angular-app-example/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: angular-app
  labels:
    istio-injection: enabled
